[gd_scene load_steps=3 format=2]

[ext_resource path="res://Themes/main_ui.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/LoginPage.gd" type="Script" id=2]

[node name="LoginPage" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="auth" type="HTTPRequest" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -100.0
margin_right = 125.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 250.0
margin_bottom = 25.0
rect_min_size = Vector2( 200, 25 )
text = "Login:"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="username" type="LineEdit" parent="VBoxContainer"]
margin_top = 29.0
margin_right = 250.0
margin_bottom = 74.0
rect_min_size = Vector2( 0, 45 )
text = "kodkuce"
align = 1
placeholder_text = "email or username"

[node name="password" type="LineEdit" parent="VBoxContainer"]
margin_top = 78.0
margin_right = 250.0
margin_bottom = 123.0
rect_min_size = Vector2( 0, 45 )
text = "lozinka.1"
align = 1
secret = true
placeholder_text = "password"

[node name="login" type="Button" parent="VBoxContainer"]
margin_top = 127.0
margin_right = 250.0
margin_bottom = 172.0
rect_min_size = Vector2( 0, 45 )
text = "TRY LOGIN"

[node name="CheckBox" type="CheckBox" parent="VBoxContainer"]
margin_top = 176.0
margin_right = 250.0
margin_bottom = 205.0
pressed = true
text = "Remember password"
flat = true
align = 1

[node name="PopupMsg" type="Popup" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -150.0
margin_right = 200.0
margin_bottom = 150.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="PopupMsg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -150.0
margin_right = 200.0
margin_bottom = 150.0
rect_min_size = Vector2( 400, 300 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="PopupMsg/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PopupMsg/Panel/MarginContainer"]
margin_right = 320.0
margin_bottom = 220.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Here we write magic text"
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 778.726
margin_top = 438.793
margin_right = 975.726
margin_bottom = 501.793
text = "NO ACCOUNT ? 
CREATE A NEW ONE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="go_register_page" type="Button" parent="."]
margin_left = 815.0
margin_top = 505.0
margin_right = 945.0
margin_bottom = 560.0
text = "REGISTER"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="request_completed" from="auth" to="." method="_on_auth_request_completed"]
[connection signal="button_up" from="VBoxContainer/login" to="." method="_on_login_button_up"]
[connection signal="popup_hide" from="PopupMsg" to="." method="_on_PopupMsg_popup_hide"]
[connection signal="button_up" from="go_register_page" to="." method="_on_go_register_page_button_up"]
